Temporarily disable running workflow on push
We first need to resolve the issue of using the latest commit for
the asset URL.

--- a/.github/workflows/markdown_equations.yml
+++ b/.github/workflows/markdown_equations.yml
@@ -21,12 +21,15 @@ name: markdown_equations
 
 # Workflow triggers:
 on:
-  push:
-    branches:
-      - develop
-    paths:
-      # List paths for which changes should trigger this workflow:
-      - 'lib/**/*.md'
+  # push:
+  #   branches:
+  #     - develop
+  #   paths:
+  #     # List paths for which changes should trigger this workflow:
+  #     - 'lib/**/*.md'
+
+  # Allow the workflow to be manually run:
+  workflow_dispatch:
 
 # Workflow jobs:
 jobs:
