--- a/.github/workflows/markdown_equations.yml
+++ b/.github/workflows/markdown_equations.yml
@@ -21,12 +21,14 @@ name: markdown_equations
 
 # Workflow triggers:
 on:
-  # push:
-  #   branches:
-  #     - develop
-  #   paths:
-  #     # List paths for which changes should trigger this workflow:
-  #     - 'lib/**/*.md'
+  pull_request:
+    branches:
+      - develop
+    types:
+      - closed
+    paths:
+      # List paths for which changes should trigger this workflow:
+      - 'lib/**/*.md'
 
 # Workflow jobs:
 jobs:
@@ -36,6 +38,9 @@ jobs:
 
     # Define a display name:
     name: 'Update equations'
+
+    # Only run this job if the pull request was merged:
+    if: github.event.pull_request.merged == true
 
     # Define the type of virtual host machine:
     runs-on: ubuntu-latest
