Use Node.js version 16
Current LTS is `v14` and it appears that the associated `npm` is
significantly slower at installing node modules. Accordingly,
this commit explicitly opts-in to `v16`. This change can be reverted
once `v16` is LTS in October.

--- a/.github/workflows/check_licenses.yml
+++ b/.github/workflows/check_licenses.yml
@@ -73,7 +73,7 @@ jobs:
       - name: 'Install Node.js'
         uses: actions/setup-node@v2
         with:
-          node-version: 'lts/*'
+          node-version: '16' # 'lts/*'
         timeout-minutes: 5
 
       # Print debug info:
