--- a/.github/workflows/standalone_push_changes.yml
+++ b/.github/workflows/standalone_push_changes.yml
@@ -58,7 +58,7 @@ jobs:
       - name: 'Install Node.js'
         uses: actions/setup-node@v2
         with:
-          node-version: 'lts/*'
+          node-version: '16' # 'lts/*'
         timeout-minutes: 5
 
       # Install dependencies (accounting for possible network failures, etc, when installing node module dependencies):
