Limit workflow runs to paths which change in the packages directory

--- a/.github/workflows/standalone_push_changes.yml
+++ b/.github/workflows/standalone_push_changes.yml
@@ -24,6 +24,12 @@ on:
   push:
     branches:
       - develop
+    paths:
+      # List paths for which changes should trigger this workflow:
+      - 'lib/node_modules/@stdlib/**'
+
+      # List paths for which changes should *not* trigger this workflow:
+      - '!lib/node_modules/@stdlib/_tools/**'
 
 # Workflow jobs:
 jobs:
