--- a/.github/workflows/standalone_test.yml
+++ b/.github/workflows/standalone_test.yml
@@ -76,8 +76,63 @@ jobs:
         timeout-minutes: 15
 
       # Trigger standalone package tests:
-      - name: 'Trigger standalone package tests'
+      - name: 'Trigger tests'
         env:
           GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
         run: |
           node lib/node_modules/@stdlib/_tools/scripts/trigger_workflow_events.js
+
+  # Define a job for sending notifications to Slack...
+  slack:
+
+    # Define a display name:
+    name: 'Slack notification'
+
+    # Define the type of virtual host machine:
+    runs-on: 'ubuntu-latest'
+
+    # Indicate that this job depends on the prior job finishing:
+    needs: trigger
+
+    # Run this job regardless of the outcome of the prior job:
+    if: always()
+
+    # Set defaults:
+    defaults:
+      run:
+        # Set the default shell to `bash`:
+        shell: bash --noprofile --norc -eo pipefail {0}
+
+    # Define the sequence of job steps...
+    steps:
+
+      # Resolve notification data:
+      - name: 'Resolve notification data'
+        run: |
+          echo 'NOTIFICATION_STATUS=${{ needs.trigger.result}}' >> $GITHUB_ENV
+          if [[ "${{ needs.trigger.result }}" = "success" ]]; then
+            echo 'NOTIFICATION_TEXT=**standalone_test** workflow succeeded' >> $GITHUB_ENV
+            echo 'NOTIFICATION_AUTHOR_NAME=Success' >> $GITHUB_ENV
+          elif [[ "${{ needs.trigger.result }}" = "failure" ]]; then
+            echo 'NOTIFICATION_TEXT=**standalone_test** workflow failed' >> $GITHUB_ENV
+            echo 'NOTIFICATION_AUTHOR_NAME=Failure' >> $GITHUB_ENV
+          elif [[ "${{ needs.trigger.result }}" = "cancelled" ]]; then
+            echo 'NOTIFICATION_TEXT=**standalone_test** workflow was canceled' >> $GITHUB_ENV
+            echo 'NOTIFICATION_AUTHOR_NAME=Canceled' >> $GITHUB_ENV
+          else
+            exit 1
+          fi
+        timeout-minutes: 5
+
+      # Send notification to Slack:
+      - name: 'Send notification'
+        uses: 8398a7/action-slack@v3
+        if: success()
+        with:
+          status: "${{ env.NOTIFICATION_STATUS }}"
+          fields: repo,commit,message
+          text: "${{ env.NOTIFICATION_TEXT }}"
+          author_name: "${{ env.NOTIFICATION_AUTHOR_NAME }}"
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.REPO_SLACK_WEBHOOK_URL }}
+        timeout-minutes: 5
