Add types to pkg.json and publish them to npm

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lib": "./lib",
     "test": "./test"
   },
+  "types": "./docs/types",
   "scripts": {
     "notes": "make notes",
     "lint": "make lint",
