--- a/tools/make/lib/ls/pkgs/Makefile
+++ b/tools/make/lib/ls/pkgs/Makefile
@@ -18,6 +18,7 @@
 
 # DEPENDENCIES #
 
+# Note: keep in alphabetical order...
 include $(TOOLS_MAKE_LIB_DIR)/ls/pkgs/addons.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/pkgs/browser_compatible.mk
 include $(TOOLS_MAKE_LIB_DIR)/ls/pkgs/clis.mk
