Add toposort lint recipe and update recipes

--- a/tools/make/lib/lint/Makefile
+++ b/tools/make/lib/lint/Makefile
@@ -18,7 +18,7 @@
 
 # DEPENDENCIES #
 
-# Note: keep in alphabetical order
+# Note: keep in alphabetical order...
 include $(TOOLS_MAKE_LIB_DIR)/lint/c/Makefile
 include $(TOOLS_MAKE_LIB_DIR)/lint/conf/Makefile
 include $(TOOLS_MAKE_LIB_DIR)/lint/filenames.mk
@@ -31,6 +31,7 @@ include $(TOOLS_MAKE_LIB_DIR)/lint/python/Makefile
 include $(TOOLS_MAKE_LIB_DIR)/lint/r/Makefile
 include $(TOOLS_MAKE_LIB_DIR)/lint/repl_help.mk
 include $(TOOLS_MAKE_LIB_DIR)/lint/shell/Makefile
+include $(TOOLS_MAKE_LIB_DIR)/lint/toposort.mk
 include $(TOOLS_MAKE_LIB_DIR)/lint/typescript/Makefile
 include $(TOOLS_MAKE_LIB_DIR)/lint/updates.mk
 
