Separate out workflow that can be manually triggered

--- a/.github/workflows/markdown_tocs_dispatch.yml
+++ b/.github/workflows/markdown_tocs_dispatch.yml
@@ -17,15 +17,12 @@
 #/
 
 # Workflow name:
-name: markdown_tocs
+name: markdown_tocs_dispatch
 
 # Workflow triggers:
 on:
-  pull_request:
-    branches:
-      - develop
-    types:
-      - closed
+  # Allow the workflow to be manually run:
+  workflow_dispatch:
 
 # Workflow jobs:
 jobs:
@@ -35,9 +32,6 @@ jobs:
 
     # Define a display name:
     name: 'Update namespace ToCs'
-
-    # Only run this job if the pull request was merged:
-    if: github.event.pull_request.merged == true
 
     # Define the type of virtual host machine:
     runs-on: ubuntu-latest
