--- a/.github/workflows/markdown_tocs.yml
+++ b/.github/workflows/markdown_tocs.yml
@@ -40,7 +40,7 @@ jobs:
     name: 'Update namespace ToCs'
 
     # Only run this job if the pull request was merged (or the job was triggered manually):
-    if: github.event.pull_request.merged == true || github.event_name = 'workflow_dispatch'
+    if: github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch'
 
     # Define the type of virtual host machine:
     runs-on: ubuntu-latest
