Add make commands

--- a/tools/make/lib/markdown/Makefile
+++ b/tools/make/lib/markdown/Makefile
@@ -23,3 +23,4 @@ include $(TOOLS_MAKE_LIB_DIR)/markdown/assets.mk
 include $(TOOLS_MAKE_LIB_DIR)/markdown/equations.mk
 include $(TOOLS_MAKE_LIB_DIR)/markdown/namespace_toc.mk
 include $(TOOLS_MAKE_LIB_DIR)/markdown/pkg_urls.mk
+include $(TOOLS_MAKE_LIB_DIR)/markdown/related.mk
