Upgrade to eslint v8

--- a/package.json
+++ b/package.json
@@ -118,7 +118,8 @@
     "doctrine": "^3.0.0",
     "dtslint": "^3.3.0",
     "envify": "^4.0.0",
-    "eslint": "^6.4.0",
+    "eslint": "^8.0.1",
+    "eslint-plugin-node": "^11.1.0",
     "factor-bundle": "^2.5.0",
     "gh-pages": "^3.2.3",
     "istanbul": "^0.4.1",
