--- a/.github/workflows/deprecate_packages.yml
+++ b/.github/workflows/deprecate_packages.yml
@@ -67,14 +67,14 @@ jobs:
             pkg=$(echo $pkg | sed -e 's/\//-/g')
 
             npm_names+="@stdlib/$pkg "
-            github_repos+="stdlib-js/$pkg "
+            github_repos+="$pkg "
           done
 
           # Write `NPM_TOKEN` to `.npmrc` file to authenticate with `npm`:
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
 
           # Construct the deprecation message:
-          msg="${{ github.event.inputs.message || 'Package no longer supported.' }}"
+          msg=${{ github.event.inputs.message || 'Package no longer supported.' }}
 
           # Deprecate the packages on `npm`:
           for pkg in $npm_names; do
