--- a/.github/workflows/deprecate_packages.yml
+++ b/.github/workflows/deprecate_packages.yml
@@ -55,6 +55,8 @@ jobs:
     steps:
       # Deprecate the specified packages on `npm` and the respective `GitHub` repositories:
       - name: 'Deprecate packages'
+        env:
+          GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
         run: |
           pkgs='${{ github.event.inputs.packages }}'
           npm_names=""
