Add debug statements

--- a/.github/workflows/npm_downloads.yml
+++ b/.github/workflows/npm_downloads.yml
@@ -64,7 +64,9 @@ jobs:
       - name: 'Fetch data'
         id: download_data
         run: |
-          data=`curl "https://api.npmjs.org/downloads/range/$(date -v-1y '+%Y-%m-%d'):$(date '+%Y-%m-%d')/${{ steps.package_name.outputs.package_name }}"`
+          url="https://api.npmjs.org/downloads/range/$(date -v-1y '+%Y-%m-%d'):$(date '+%Y-%m-%d')/${{ steps.package_name.outputs.package_name }}"
+          echo "$url"
+          data=$(curl "$url")
           mkdir ./tmp
           echo "$data" > ./tmp/npm_downloads.json
           echo "::set-output name=data::$data"
