Fix `date` usage
For reference:

- https://unix.stackexchange.com/questions/162607/date-command-going-back-one-or-two-days-seeing-different-flags
- https://pubs.opengroup.org/onlinepubs/9699919799/utilities/date.html

In short, OSX has a convenient `-v` option which is not in the POSIX
standard, while the Ubuntu `date` has a `--date` option.

--- a/.github/workflows/npm_downloads.yml
+++ b/.github/workflows/npm_downloads.yml
@@ -64,7 +64,7 @@ jobs:
       - name: 'Fetch data'
         id: download_data
         run: |
-          url="https://api.npmjs.org/downloads/range/$(date -v-1y '+%Y-%m-%d'):$(date '+%Y-%m-%d')/${{ steps.package_name.outputs.package_name }}"
+          url="https://api.npmjs.org/downloads/range/$(date --date='1 year ago' '+%Y-%m-%d'):$(date '+%Y-%m-%d')/${{ steps.package_name.outputs.package_name }}"
           echo "$url"
           data=$(curl "$url")
           mkdir ./tmp
