--- a/.github/workflows/repl_docs.yml
+++ b/.github/workflows/repl_docs.yml
@@ -95,6 +95,7 @@ jobs:
 
       # Create a pull request with the updated documentation:
       - name: 'Create pull request'
+        id: cpr
         uses: peter-evans/create-pull-request@v3
         with:
           title: 'Update REPL namespace'
@@ -112,3 +113,12 @@ jobs:
             stdlib-reviewers
           branch: update-repl-docs
           delete-branch: true
+
+        # Create Markdown summary of the pull request:
+        - name: 'Create summary'
+          run: |
+            echo "# :tada: Pull Request created! :tada:" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "Pull request ${{ steps.cpr.outputs.pull-request-number }} was successfully ${{ steps.cpr.outputs.pull-request-operation }}."
+            echo ":link: [${{ steps.cpr.outputs.pull-request-url }}](${{ steps.cpr.outputs.pull-request-url }})." >> $GITHUB_STEP_SUMMARY
+            echo "Head SHA: [${{ steps.cpr.outputs.head-sha }}](${{ steps.cpr.outputs.pull-request-url }}/commits/${{ steps.cpr.outputs.pull-request-url }})." >> $GITHUB_STEP_SUMMARY
