--- a/.gitattributes
+++ b/.gitattributes
@@ -22,6 +22,8 @@
 
 # Automatically normalize the line endings of any committed text files:
 * text=auto
+/lib/node_modules/@stdlib/utils/dsv/base/parse/test/fixtures/excel_copy_paste_crlf.csv eol=crlf
+/lib/node_modules/@stdlib/utils/dsv/base/parse/test/fixtures/crlf.csv eol=crlf
 
 # Override what is considered "vendored" by GitHub's linguist:
 /deps/** linguist-vendored=false
